<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.github.davidmoten</groupId>
        <artifactId>sonatype-parent</artifactId>
        <version>0.1</version>
    </parent>
    <artifactId>jwiki</artifactId>
    <version>0.1-SNAPSHOT</version>
    <name>${project.artifactId}</name>
    <description>Mediawiki api in java</description>
    <packaging>jar</packaging>

    <url>http://github.com/davidmoten/jwiki</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.target>1.8</maven.compiler.target>
    </properties>

    <ciManagement>
        <system>Travis</system>
        <url>https://travis-ci.org/davidmoten/jwiki</url>
    </ciManagement>

    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/davidmoten/jwiki/issues</url>
    </issueManagement>

    <inceptionYear>2019</inceptionYear>
    <developers>
        <developer>
            <id>dave</id>
            <name>Dave Moten</name>
            <url>https://github.com/davidmoten/</url>
            <roles>
                <role>architect</role>
                <role>developer</role>
            </roles>
            <timezone>+10</timezone>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:https://github.com/davidmoten/jwiki.git</connection>
        <developerConnection>scm:git:https://github.com/davidmoten/jwiki.git</developerConnection>
        <url>scm:git:https://github.com:davidmoten/jwiki.git</url>
        <tag>HEAD</tag>
    </scm>

    <dependencies>

        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.8.5</version>
        </dependency>
        <dependency>
            <groupId>com.squareup.okhttp3</groupId>
            <artifactId>okhttp</artifactId>
            <version>4.1.0</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.squareup.okhttp3</groupId>
            <artifactId>mockwebserver</artifactId>
            <version>4.1.0</version>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>${maven.compiler.target}</source>
                    <target>${maven.compiler.target}</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.4</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
